updates in programs page

--- a/src/app/(web)/globals.css
+++ b/src/app/(web)/globals.css
@@ -133,7 +133,7 @@ p {
 }
 
 .img {
-  @apply object-cover w-full h-full;
+  @apply object-cover w-full h-full rounded-[3rem];
 }
 
 .scale-animation {
